--- a/src/main.module.scss
+++ b/src/main.module.scss
@@ -1,10 +1,10 @@
-// .dialog {
-//   --c-overlay-opacity: 0.5;
-//   --c-overlay-bg-color: red;
-// }
+.dialog {
+  --c-overlay-opacity: 0.5;
+  --c-overlay-bg-color: red;
+}
 
-// .footer {
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-// }
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
